--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
             </svg>
             <span class="jsx-c0b110e543709093 about-text07">I am an enthusiastic graduate, with a 1st Class Honours degree in Ethical Hacking and Cyber Security at Coventry Univeristy. I actively participate in cyber security events such as the CTF events, hacking groups/talks from guest speakers (sometimes through the Computer Security Society) to practise and understand more about hacking. Taking a placement year to penetration test Hypercars and Supercars has given me a vast knowledge in the cyber security automotive world. I am particularly proud of my hacking into IoT project where me and my team won a prize by following the penetration process of researching the infrastructure of the whiteboard devices in classrooms and gaining full root/administrator access. I am hardworking, honest, dependable, and self-motivated, clearly demonstrated by my project completion successes.</span><span class="jsx-c0b110e543709093 about-text08">Owen Ball</span>
           </div>
-          <img alt="Portrait Picture of Owen ball" src="images/image%20of%20me-dd-200h.jpg" loading="eager" class="jsx-c0b110e543709093 about-image"/>
+          <img alt="Portrait Picture of Owen ball" src="images/portrait.jpg" loading="eager" class="jsx-c0b110e543709093 about-image"/>
         </div>
         <h1 class="jsx-c0b110e543709093"><br class="jsx-c0b110e543709093"/><br class="jsx-c0b110e543709093"/><br class="jsx-c0b110e543709093"/><br class="jsx-c0b110e543709093"/><br class="jsx-c0b110e543709093"/><br class="jsx-c0b110e543709093"/><br class="jsx-c0b110e543709093"/></h1>
         <div class="jsx-c0b110e543709093 about-cards-container"></div>
