--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
               </div>
             </div>
           </a>
+          <a href="https://github.com/Ballo-02/GPS_Spoofing" target="_blank" rel="noreferrer noopener" class="jsx-e274bd0416c4409b projects-link08">
           <div class="jsx-292ce2e142a81ffb place-card-container">
             <img alt="Simulating GPS co-ordinates on a Aston martin infotainment System" src="images/gps-300h.jpg" class="jsx-292ce2e142a81ffb place-card-image"/>
             <div class="jsx-292ce2e142a81ffb place-card-container1">
