Added correct tab

--- a/contact.html
+++ b/contact.html
@@ -7,8 +7,8 @@
   <head>
     <meta charSet="utf-8"/>
     <meta name="viewport" content="width=device-width"/>
-    <title class="jsx-8fa5d748aa073757">Contact - Travel Agency</title>
-    <meta property="og:title" content="Contact - Travel Agency" class="jsx-8fa5d748aa073757"/>
+    <title class="jsx-8fa5d748aa073757">Contact - Owen B Profile</title>
+    <meta property="og:title" content="Contact -Owen B Profile" class="jsx-8fa5d748aa073757"/>
     <meta name="next-head-count" content="4"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charSet="utf-8"/>
