--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 		body {
 			margin: 0;
 			padding: 0;
-			font-family: Arial, sans-serif;
+			font-family: Poppins;
 		}
 
 		nav {
@@ -70,9 +70,9 @@
 			right: 0;
 		}
 		.place-card-container{
-		  height: 700px; 
+		  height: 450px; 
 		  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-		  width: 61%;
+		  width: 65%;
 		  margin: auto;
 		  position: relative;
 		  top: 35%;
@@ -80,7 +80,7 @@
 		  right: 0;
 		}
 		.place-card-text {
-		  width: 75%;
+		  width: 73%;
 		  height: 0;
 		  position: relative;
 		    top: 10%;
@@ -98,7 +98,7 @@
 		  color: black;
 		  font-weight: normal;
 		  font-family: Poppins;
-		  font-size: 2.5em;
+		  font-size: 1.5em;
 		  display: inline-block;
 		}
 		.comma img{
@@ -113,7 +113,7 @@
 		  font-family: Poppins;
 		  color: black;
 		  font-weight: bold;
-		  font-size: 3em;
+		  font-size: 2em;
 		  position: relative;
 			top: 10%;
 			left: 1%;
@@ -123,13 +123,13 @@
 		  width: 40%;
 		  height: 60%;
 		  position: relative;
-			top: 10%;
-			left: 105%;
+			top: 0;
+			left: 110%;
 			right: 0;
 		}
 		.portrait img {
-		  width: 450px;
-		  height: 450px;
+		  width: 300px;
+		  height: 300px;
 		}
 		
 	</style>
