Made index page as same projects

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		body {
 			margin: 0;
 			padding: 0;
-			font-family: Arial, sans-serif;
+			font-family: Poppins;
 		}
 
 		nav {
@@ -193,7 +193,7 @@
 	<nav>
 		<a href="index.html">Home</a>
 		<a href="about.html">About</a>
-		<a href="projects.html">Projects</a>
+		<a href="index.html">Projects</a>
 		<a href="contact.html">Contact</a>
 	</nav>
 	<div class="main-image">
@@ -254,13 +254,13 @@
 		
 		<div class="place-card-container9">
 		  <img alt="3D survival game (A Level Dissertation)" src="images/survival_square.png" class="place-card-image"/>
-			<a href="href="https://github.com/Ballo-02/3D-survival-game-A-level-dissertation-"  rel="3D survival game (A Level Dissertation)"><span class=" place-card-text">3D survival game (A Level Dissertation)</span> </a>
+			<a href="https://github.com/Ballo-02/3D-survival-game-A-level-dissertation-"  rel="3D survival game (A Level Dissertation)"><span class=" place-card-text">3D survival game (A Level Dissertation)</span> </a>
 			<span class="place-card-text1">A project intended for my computer science A Level course where I self-taught myself C# and Unity. I attained a A* in this project and documented this in the word and pdf document above. Below shows a brief description of what I wanted to achieve and the reason why there was a gap in this part of the game market.</span>
 		</div>
 		
 		<div class="place-card-container10">
 		  <img alt="Full RCE VIA Kramer (IoT Devcies) box" src="images/VIA_square.png" class="place-card-image"/>
-			<a href="href="https://github.com/Ballo-02/Via-Kramer-Whiteboard-"  rel="Full RCE VIA Kramer (IoT Devcies) box"><span class=" place-card-text">Full RCE VIA Kramer (IoT Devcies) box</span> </a>
+			<a href="https://github.com/Ballo-02/Via-Kramer-Whiteboard-"  rel="Full RCE VIA Kramer (IoT Devcies) box"><span class=" place-card-text">Full RCE VIA Kramer (IoT Devcies) box</span> </a>
 			<span class="place-card-text1">A project intended for the Coventry University Talent Showcase event where we hacked into IoT (Internet of Things) e.g. the whiteboard. We managed to get full RCE without admintstrator priveladge for the kramer Go (debain) and the same for the windows version but pre-exisitng user needed with password. I also added an additional script to change the background photo and room information such as code and name.</span>
 		</div>
 	</div>
