--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
 	<nav>
 		<a href="index.html">Home</a>
 		<a href="about.html">About</a>
-		<a href="projects.html">Projects</a>
+		<a href="index.html">Projects</a>
 		<a href="contact.html">Contact</a>
 	</nav>
 	<div class="main-image">
