--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 		body {
 			margin: 0;
 			padding: 0;
-			font-family: Arial, sans-serif;
+			font-family: Poppins;
 		}
 
 		nav {
@@ -67,7 +67,7 @@
 	<nav>
 		<a href="index.html">Home</a>
 		<a href="about.html">About</a>
-		<a href="projects.html">Projects</a>
+		<a href="index.html">Projects</a>
 		<a href="contact.html">Contact</a>
 	</nav>
 	<div class="main-image">
