--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Owen B profile</title>
 	<style>
 		body {
-			margin: 0;
+			
 			padding: 0;
 			font-family: Poppins;
 		}
@@ -56,108 +56,108 @@
 		.main-image img{
 		  width: 100%;
 		  height: 100%;
+		  position: relative;
 		}
 		
 		.project-title{
 		  font-family: inherit;
 		  color: black;
-		  position: relative;
-			top: 300%;
-			left: 30%;
+		  position: absolute;
+			top: 300px;
+			left: 10%;
 			right: 0;
+			margin-top: 8%;
 		}
 		.place-card-container {
-		  max-width: 700px;
-		  height: 800px;
-		  position: absolute;
-			top: 45%;
-			left: 30%;
-			right: 0;
+			width: 100%;
+		    height: 100%;
+			position: absolute;
+			  top: 10%;
+			  margin-top: 100px;
 		}
 		.place-card-container1 {
-		  max-width: 300px;
-		  max-length: 1000px;
+		  width: 300px;
+		  height: 1000px;
 		  position: absolute;
-			top: 10%;
+			top: 400px;
 			left: 10%;
 			right: 0;
 		}
 		.place-card-container2 {
-		  max-width: 300px;
-		  max-length: 1000px;
+		  width: 300px;
+		  height: 1000px;
 		  position: absolute;
-			top: 10%;
-			left: 60%;
+			top: 400px;
+			left: 40%;
 			right: 0;
 		}
 		.place-card-container3 {
-		  max-width: 300px;
-		  max-length: 1000px;
+		  width: 300px;
+		  height: 1000px;
 		  position: absolute;
-			top: 10%;
-			left: 110%;
+			top: 400px;
+			left: 70%;
 			right: 0;
 		}
 		.place-card-container4 {
-		  max-width: 300px;
-		  max-length: 1000px;
+		  width: 300px;
+		  height: 1000px;
 		  position: absolute;
-			top: 80%;
+			top: 950px;
 			left: 10%;
 			right: 0;
 		}
 		.place-card-container5 {
-		  max-width: 300px;
-		  max-length: 1000px;
+		  width: 300px;
+		  height: 1000px;
 		  position: absolute;
-			top: 80%;
-			left: 60%;
+			top: 950px;
+			left: 40%;
 			right: 0;
 		}
 		.place-card-container6 {
-		  max-width: 300px;
-		  max-length: 1000px;
+		  width: 300px;
+		  height: 1000px;
 		  position: absolute;
-			top: 80%;
-			left: 110%;
+			top: 950px;
+			left: 70%;
 			right: 0;
 		}
 		.place-card-container7 {
-		  max-width: 300px;
-		  max-length: 1000px;
+		  width: 300px;
+		  height: 1000px;
 		  position: absolute;
-			top: 155%;
+			top: 1550px;
 			left: 10%;
 			right: 0;
 		}
 		.place-card-container8 {
-		  max-width: 300px;
-		  max-length: 1000px;
+		  width: 300px;
+		  height: 1000px;
 		  position: absolute;
-			top: 155%;
-			left: 60%;
+			top:1550px;
+			left: 40%;
 			right: 0;
 		}
 		.place-card-container9 {
 		  width: 300px;
-		  max-length: 1000px;
+		  height: 1000px;
 		  position: absolute;
-			top: 155%;
-			left: 110%;
+			top: 1550px;
+			left: 70%;
 			right: 0;
 		}
 		.place-card-container10 {
-		  max-width: 300px;
-		  max-length: 1000px;
+		  width: 300px;
+		  height: 1000px;
 		  position: absolute;
-			top: 230%;
+			top: 2150px;
 			left: 10%;
 			right: 0;
 		}
 		.place-card-image {
 		  width: 300px;
 		  height: 280px;
-		  margin: 0 auto;
 		  position: absolute;
 			top: 10px;
 			left:0;
@@ -168,7 +168,7 @@
 		  color: black;
 		  font-size: 25px;
 		  width: 300px;
-		  length: 300px;
+		  height: 300px;
 		  position: absolute;
 			top: 300px;
 			left:0;
@@ -199,10 +199,10 @@
 	<div class="main-image">
 		<img src="images/long.png" alt="Collection of Images related to the author">
 	</div>
-	<div class="project-title">
-	  <h1 style="font-weight: bold ">Projects</h1>
-	  <a> Both Univeristy work and Personal </a>
-	</div>
+		<div class="project-title">
+		<h1 style="font-weight: bold ">Projects</h1>
+		<a> Both Univeristy work and Personal </a>
+		</div>
 	<div class="place-card-container">
 		<div class="place-card-container1">
 		  <img alt="Full RCE VIA Kramer (IoT Devcies) box" src="images/VIA_square.png" class="place-card-image"/>
@@ -225,7 +225,7 @@
 		<div class="place-card-container4">
 		  <img alt="Controller &amp; Client Scripts" src="images/socket_square.png" class="place-card-image"/>
 			<a href="https://github.com/Ballo-02/sockets"  rel="Controller &amp; Client Scripts"><span class=" place-card-text">Controller &amp; Client Scripts</span> </a>
-			<span class="place-card-text1">A project intended for my 2nd year Ethical Hacking and Cyber Security degree which involves a client (can be multiple scripts each on different machines) and a controller that will control these client scripts. You can send live commands to each client, relay a command (send a command from one client to the next), send python commands and send general useful commands used for enumerating a machine. This can all be selected from the GUI (Graphical User Interface) menu when the script is run. The client will be constantly running in the background which will generate a key that needs to be shared across to the controller so that all information is encrypted when communicating from one machine to the next. Therefore, eliminating any possible sensitive data to be stolen. If any command sent cause an error the script has a built-in error handling service with a GUI strip telling the user if the controller is connected to the client or disconnected.</span>
+			<span class="place-card-text1">A project intended for my 2nd year Ethical Hacking and Cyber Security degree which involves a client (can be multiple scripts each on different machines) and a controller that will control these client scripts. You can send live commands to each client, relay a command (send a command from one client to the next), send python commands and send general useful commands used for enumerating a machine. This can all be selected from the GUI (Graphical User Interface) menu when the script is run.</span>
 		</div>
 		
 		<div class="place-card-container5">
