--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="style.css" />
 	<title>Owen B profile</title>
 	<style>
 		body {
@@ -73,8 +74,7 @@
 	<div class="main-image">
 		<img src="images/long.png" alt="Collection of Images related to the author">
 	</div>
-
-<div class="fcf-body">
+  <div class="fcf-body">
 
     <div id="fcf-form">
     <h3 class="fcf-h3">Contact Me</h3>
@@ -108,3 +108,4 @@
 
     </form>
 </body>
+  <a href=mailto:<nowiki>owen.edward.ball@gmai.com?subject="HTML link">Click here to send us an email!!!</a>
