--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 		</div>
 	<div class="place-card-container">
 		<div class="place-card-container1">
-		  <img alt="Full RCE VIA Kramer (IoT Devcies) box" src="images/VIA_square.png" class="place-card-image"/>
+		  <img alt="Full RCE VIA Kramer (IoT Devices) box" src="images/VIA_square.png" class="place-card-image"/>
 			<a href="https://github.com/Ballo-02/Via-Kramer-Whiteboard-"  rel="Full RCE VIA Kramer (IoT Devcies) box"><span class=" place-card-text">Full RCE VIA Kramer (IoT Devcies) box</span> </a>
 			<span class="place-card-text1">A project intended for the Coventry University Talent Showcase event where we hacked into IoT (Internet of Things) e.g. the whiteboard. We managed to get full RCE without admintstrator priveladge for the kramer Go (debain) and the same for the windows version but pre-exisitng user needed with password. I also added an additional script to change the background photo and room information such as code and name.</span>
 		</div>
