--- a/about.html
+++ b/about.html
@@ -129,6 +129,7 @@
 		<a href="index.html">Home</a>
 		<a href="about.html">About</a>
 		<a href="index.html">Projects</a>
+		<a href="blog.html">Blog</a>
 		<a href="contact.html">Contact</a>
 	</nav>
 	<div class="main-image">
