Working Contact form

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
     <div id="fcf-form">
     <h3 class="fcf-h3">Contact Me</h3>
 
-    <form id="fcf-form-id" class="fcf-form-class" method="post" action="contact-form-process.php">
+    <form id="fcf-form-id" class="fcf-form-class" method="post" action="https://forms.un-static.com/forms/80b7acafba45c8a577b24d5b3869d63ecef25993">
         
         <div class="fcf-form-group">
             <label for="Name" class="fcf-label">Your name</label>
@@ -108,4 +108,3 @@
 
     </form>
 </body>
-  <a href=mailto:<nowiki>owen.edward.ball@gmai.com?subject="HTML link">Click here to send us an email!!!</a>
