--- a/about.html
+++ b/about.html
@@ -102,14 +102,18 @@
 			left: 1%;
 			right: 0;
 		}
-		.author a{
+		.author {
+		  height: 100px;
+		  width: 300px;
 		  font-family: Poppins;
 		  color: black;
 		  font-weight: bold;
 		  font-size: 2em;
+		}
+		.author a{
 		  position: absolute;
-			top: 10%;
-			left: 1%;
+			top: 860px;
+			left: 6%;
 			right: 0;
 		}
 		.portrait{
@@ -149,7 +153,7 @@
 			<h1>I am an enthusiastic graduate, with a 1st Class Honours degree in Ethical Hacking and Cyber Security at Coventry Univeristy. I actively participate in cyber security events such as the CTF events, hacking groups/talks from guest speakers (sometimes through the Computer Security Society) to practise and understand more about hacking. Taking a placement year to penetration test Hypercars and Supercars has given me a vast knowledge in the cyber security automotive world. I am particularly proud of my hacking into IoT project where me and my team won a prize by following the penetration process of researching the infrastructure of the whiteboard devices in classrooms and gaining full root/administrator access. I am hardworking, honest, dependable, and self-motivated, clearly demonstrated by my project completion successes.</h1>
 		</div>
 		<span class="author">
-			<a>Owen Ball</a>
+			<a>- Owen Ball</a>
 		</span>
 	</div>
 </body>
