--- a/profile.html
+++ b/profile.html
@@ -5,6 +5,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets-profile/css/profile.css" />
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-OkYHYM9FJvG8Wkf3IqTIDlKh1sJk4s8s+eK7SA4RNFnlXap2QFdizc+fsJ7AIvxH" crossorigin="anonymous">
+
 		<noscript><link rel="stylesheet" href="assets-profile/css/noscript.css" /></noscript>
 	</head>
 		<!-- Wrapper -->
@@ -50,15 +52,17 @@
 								<div class="spotlight">
 									<div class="content">
 										<header class="major">
-											<h2>Ipsum sed adipiscing</h2>
+											<h2>Introduction</h2>
 										</header>
-										<p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-										adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-										Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn More</a></li>
-										</ul>
-									</div>
+										<p>I am an enthusiastic full-time student of <b>Ethical Hacking and Cyber Security</b> at Coventry University, currently on
+											track to graduate with a <b>1st Class Honours</b>. I actively participate in Cyber Security events such as the <b>HTB</b> university
+											CTF, <b>hacking groups/talks</b> from guest speakers (Computer Security Society) Pedro Ribeiro to practise and
+											understand more about hacking. I am particularly proud of my <b>hacking into IoT project</b> where me and my team
+											won a prize by following the penetration process of researching the infrastructure of the whiteboard devices in
+											classrooms and gaining <b>full root/administrator access</b>. I am hardworking, honest, dependable, and self-motivated,
+											clearly demonstrated by my project completion successes. Iʼm interested in undertaking a <b>11-month placement</b>
+											opportunity.
+											</p>
 									<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 								</div>
 							</section>
@@ -66,115 +70,90 @@
 						<!-- First Section -->
 							<section id="first" class="main special">
 								<header class="major">
-									<h2>Magna veroeros</h2>
+									<h2>Skills</h2>
 								</header>
 								<ul class="features">
 									<li>
 										<span class="icon solid major style1 fa-code"></span>
-										<h3>Ipsum consequat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<h3>Programming/Scripting Languages</h3>
+										<p>Python, PHP, SQL, C</p>
 									</li>
 									<li>
-										<span class="icon major style3 fa-copy"></span>
-										<h3>Amed sed feugiat</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span class="icon major style2 brands fa-ubuntu"></span>
+										<h3>OS</h3>
+										<p>Unix (Ubuntu, Kali, etc), Windows, QNX, ROS</p>
 									</li>
 									<li>
-										<span class="icon major style5 fa-gem"></span>
-										<h3>Dolor nullam</h3>
-										<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+										<span class="icon major style3 solid fa-network-wired"></span>
+										<h3>CISCO</h3>
+										<p>Network configuration and setting</p>
+									</li>
+									<li>
+										<span class="icon major style4 brands fa-microsoft"></span>
+										<h3>Advanced knowledge on Microsoft Applications</h3>
+										<p>PowerPoint, Word, and Excel</p>
+									</li>
+									<li>
+										<span class="icon major style5 solid fa-car"></span>
+										<h3>Automotive Engineering</h3>
+										<p>Knowing the internals of the CAN Bus and the structure of car infotainment systems</p>
+									</li>
+									<li>
+										<span class="icon major style6 brands fa-free-code-camp"></span>
+										<h3>Pen-Testing</h3>
+										<p>Understand/Research vulnerabilities and exploit them</p>
 									</li>
 								</ul>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
 							</section>
 
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Ipsum consequat</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+									<h2>Qualifications</h2>
 								</header>
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-code-branch"></span>
-										<strong>5,120</strong> Etiam
+										<strong>Ethical Hacking and Cyber Security BSc (Hons)</strong> 
 									</li>
 									<li class="style2">
 										<span class="icon fa-folder-open"></span>
-										<strong>8,192</strong> Magna
+										<strong>A Levels</strong> Computer Science, Mathematics and Chemistry
 									</li>
 									<li class="style3">
 										<span class="icon solid fa-signal"></span>
-										<strong>2,048</strong> Tempus
+										<strong>Opportunity Sponsorship award</strong> Capgemini
+										IoT devices as shown in my "Pentesting Via Kramer" project
 									</li>
 									<li class="style4">
 										<span class="icon solid fa-laptop"></span>
-										<strong>4,096</strong> Aliquam
+										<strong>CCNA: Switching. Routing and Wireless Essentials</strong> 
 									</li>
 									<li class="style5">
 										<span class="icon fa-gem"></span>
-										<strong>1,024</strong> Nullam
+										<strong>Duke of Edinburgh Bronze Award</strong> "The Duke of Edinburgh's Award is a youth awards programme"							
 									</li>
 								</ul>
-								<p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
-							</section>
+								<p class="content">
+									<h1>Interests</h1>
+									<li>I like to assist my father with the mechanical,
+										electrical and bodywork maintenance and upgrade of
+										his classic 1960's British roadster car
+									</li>
+									<li>
+										Playing different instrument's especially piano
+									</li>
+									<li>
+										My love of cars and cyber security make Automotive
+										Hacking and Pen Testing the biggest carear asperation
+									</li>
+									<li>
+										CTF's both competitive and platform
+									</li>
 
-						<!-- Get Started -->
-							<section id="cta" class="main special">
-								<header class="major">
-									<h2>Congue imperdiet</h2>
-									<p>Donec imperdiet consequat consequat. Suspendisse feugiat congue<br />
-									posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
-								</header>
-								<footer class="major">
-									<ul class="actions special">
-										<li><a href="generic.html" class="button primary">Get Started</a></li>
-										<li><a href="generic.html" class="button">Learn More</a></li>
-									</ul>
-								</footer>
+								</p>
 							</section>
-
 					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<h2>Aliquam sed mauris</h2>
-							<p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn More</a></li>
-							</ul>
-						</section>
-						<section>
-							<h2>Etiam feugiat</h2>
-							<dl class="alt">
-								<dt>Address</dt>
-								<dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-								<dt>Phone</dt>
-								<dd>(000) 000-0000 x 0000</dd>
-								<dt>Email</dt>
-								<dd><a href="#">information@untitled.tld</a></dd>
-							</dl>
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-							</ul>
-						</section>
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-					</footer>
 
 			</div>
 
