Updated Blog Images

--- a/index.html
+++ b/index.html
@@ -161,30 +161,30 @@
 						</header>
 						<div class="row">
 							<article class="col-4 col-12-mobile special">
-								<a href="blog1" class="image featured"><img src="images/blog1" alt="blog1" /></a>
+								<a href="#" class="image featured"><img src="images/autopilot.png" alt="blog1" /></a>
 								<header>
-									<h3><a href="blog1">Blog 1</a></h3>
+									<h3><a href="#">Simulating GPS Co-Ordinates on a Aston Martin Infotainment System-Success</a></h3>
 								</header>
 								<p>
-									About blog 1
+									To see how easily GPS can be spoofed
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="blog2" class="image featured"><img src="images/blog1" alt="blog2" /></a>
+								<a href="blog2" class="image featured"><img src="images/cloneid.jpg" alt="blog2" /></a>
 								<header>
-									<h3><a href="blog2">Blog 2</a></h3>
+									<h3><a href="blog2">Cloning Paxton key fob with Easy ProxyMark3 and Flipper</a></h3>
 								</header>
 								<p>
-									About blog 2
+									Further my research into how keycard entry systems work and can be exploited
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="blog3" class="image featured"><img src="images/blog1" alt="blog3" /></a>
+								<a href="blog3" class="image featured"><img src="images/charging.png" alt="blog3" /></a>
 								<header>
-									<h3><a href="blog3">Blog 3</a></h3>
+									<h3><a href="blog3">Capturing RF Charging signals from Tesla stations and replaying to open charging ports</a></h3>
 								</header>
 								<p>
-									About blog 3
+									This allowed me to capture the signals view what was sent and replay it using a HackRf One and Flipper
 								</p>
 							</article>
 						</div>
