--- a/research_blog.html
+++ b/research_blog.html
@@ -107,7 +107,7 @@
 							<ul class="stats">
 								<li><a href="#" class="icon brands fa-github"></a></li>
 								<li><a href="#" class="icon brands fa-linkedin">32</a></li>							</div>
-						<a href="images/charging.png" class="image featured"><img src="images/charginf.png" alt="" /></a>
+						<a href="images/charging.png" class="image featured"><img src="images/charging.png" alt="" /></a>
 						<p>
 							I saw this being done a while back and quickly downloaded the Tesla files to my flipper and tried it out on a colleagues tesla (with permission of course) and It WORKED (2023)! This shocked me and raised 
 							more questions than answered. Why does this signal open the charging ports, is this a potential backdoor door into the vehicle and dows this work with other electric/hybrid cars?Let the research begin!!!
